<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_sort" android:id="@id/action_sort" android:title="@string/sort" app:showAsAction="always" />
    <item android:icon="@drawable/ic_help" android:id="@id/action_help" android:title="@string/help_center" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_label_outline" android:id="@id/action_manage_labels" android:title="@string/manage_app_labels" app:showAsAction="never" />
    <item android:icon="@drawable/ic_app" android:id="@id/action_app_backup_settings" android:title="@string/app_backup_settings" app:showAsAction="never" />
    <item android:icon="@drawable/ic_settings" android:id="@id/action_settings" android:title="@string/settings" app:showAsAction="never" />
</menu>
