<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/grp_edit">
        <item android:id="@+id/action_search" android:title="@string/search" app:showAsAction="ifRoom" />
        <item android:id="@+id/action_filter" android:title="@string/filter" app:showAsAction="ifRoom" />
        <item android:id="@+id/action_select_all" android:title="@string/select_apps" android:checkable="true" android:checked="false" app:showAsAction="always" />
        <item android:id="@+id/action_app_backup_settings" android:title="@string/app_backup_settings" app:showAsAction="never" />
        <item android:id="@+id/action_settings" android:title="@string/settings" app:showAsAction="never" />
    </group>
</menu>