<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_information"
        android:id="@+id/action_backup_details"
        android:title="@string/backup_details"
        android:iconTint="?android:attr/textColorSecondary"/>
    <item
        android:icon="@drawable/ic_article"
        android:id="@+id/action_metadata"
        android:visible="false"
        android:title="Metadata"
        android:iconTint="?android:attr/textColorSecondary"/>
    <item
        android:icon="@drawable/ic_protection_on"
        android:id="@+id/action_protect_backup"
        android:title="@string/protect_backup"
        android:iconTint="?android:attr/textColorSecondary"/>
    <item
        android:icon="@drawable/ic_notes"
        android:id="@+id/action_update_note"
        android:title="@string/add_note"
        android:iconTint="?android:attr/textColorSecondary"/>
    <item
        android:icon="@drawable/ic_cloud_upload"
        android:id="@+id/action_sync"
        android:visible="false"
        android:title="@string/sync_in_cloud"
        android:iconTint="?android:attr/textColorSecondary"/>
    <item
        android:icon="@drawable/ic_delete"
        android:id="@+id/action_delete"
        android:title="@string/delete_backup"
        android:iconTint="?android:attr/textColorSecondary"/>
</menu>
