<?xml version="1.0" encoding="utf-8"?><ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent"><LinearLayout android:orientation="vertical" android:padding="@dimen/spacing_medium" android:layout_width="match_parent" android:layout_height="wrap_content"><com.google.android.material.appbar.MaterialToolbar android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:title="@string/app_details"/><TextView android:id="@+id/detail_title" style="@style/Title" android:layout_width="match_parent" android:layout_height="wrap_content"/><TextView android:id="@+id/detail_info" style="@style/Subtitle" android:layout_width="match_parent" android:layout_height="wrap_content"/><TextView android:id="@+id/detail_restore" android:text="@string/restore_all_apps" style="@style/Title" android:padding="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content"/><TextView android:id="@+id/detail_app_info" android:text="@string/app_info" style="@style/Title" android:padding="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content"/></LinearLayout></ScrollView>