<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_medium">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="@dimen/spacing_normal"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_normal">
        <ImageView
            android:id="@+id/iv_icon"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:translationY="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:layout_gravity="end|center_vertical"
            android:id="@+id/iv_favorite"
            android:background="@drawable/circle"
            android:visibility="gone"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_favorite"
            android:translationY="16dp"
            android:tintMode="src_in"
            android:backgroundTint="?android:attr/colorBackground"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon"
            app:layout_constraintEnd_toEndOf="@+id/iv_icon"
            app:layout_constraintStart_toStartOf="@+id/iv_icon"
            app:tint="@color/favorites"/>
        <TextView
            android:id="@+id/tv_package_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:alpha="0.6"
            android:layout_marginStart="@dimen/spacing_normal"
            app:layout_constraintEnd_toStartOf="@+id/iv_menu"
            app:layout_constraintStart_toEndOf="@+id/iv_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_icon"
            style="@style/TextCaption"/>
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="@+id/tv_package_name"
            app:layout_constraintStart_toStartOf="@+id/tv_package_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_package_name"
            style="@style/Title"/>
        <TextView
            android:id="@+id/tv_version_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="@+id/tv_package_name"
            app:layout_constraintStart_toStartOf="@+id/tv_package_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
            style="@style/Subtitle"/>
        <org.swiftapps.swiftbackup.views.QuickRecyclerView
            android:id="@+id/rv_app_labels"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:longClickable="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_package_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_version_info"/>
        <ImageView
            android:id="@+id/iv_menu"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="12dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_dots_vertical"
            android:translationX="12dp"
            android:translationY="-12dp"
            android:tintMode="src_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?android:attr/textColorSecondary"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/barrier1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tv_package_name"
            app:layout_constraintTop_toBottomOf="@+id/rv_app_labels">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_launch"
                android:visibility="gone"
                android:text="@string/launch"
                app:icon="@drawable/ic_launch_mini"
                app:layout_constraintStart_toStartOf="@+id/tv_package_name"
                app:layout_constraintTop_toBottomOf="@+id/rv_app_labels"
                style="@style/DetailMiniButton"/>
            <com.google.android.material.button.MaterialButton
                android:textColor="@color/disabled_app_indicator"
                android:id="@+id/btn_enable"
                android:visibility="gone"
                android:text="@string/enable"
                android:backgroundTint="@color/disabled_app_indicator10"
                app:icon="@drawable/ic_enable_mini"
                app:iconTint="@color/disabled_app_indicator"
                app:layout_constraintStart_toEndOf="@+id/btn_launch"
                app:layout_constraintTop_toTopOf="@+id/btn_launch"
                app:rippleColor="@color/disabled_app_indicator10"
                style="@style/DetailMiniButton"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_uninstall"
                android:visibility="gone"
                android:text="@string/uninstall"
                app:icon="@drawable/ic_delete_mini"
                app:layout_constraintStart_toEndOf="@+id/btn_enable"
                app:layout_constraintTop_toTopOf="@+id/btn_launch"
                style="@style/DetailMiniButton"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_not_installed"
                android:visibility="gone"
                android:text="@string/not_installed"
                app:layout_constraintStart_toEndOf="@+id/btn_uninstall"
                app:layout_constraintTop_toTopOf="@+id/btn_launch"
                style="@style/DetailMiniButton"/>
        </LinearLayout>
        <View
            android:id="@+id/divider_btns"
            android:visibility="gone"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier1"
            style="@style/DividerThinNoMargins"/>
        <include
            android:id="@+id/detailed_card_app_storage"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier1"
            layout="@layout/detail_card_app_storage"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
